# opal

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Makefile  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  opal.sln  opal.vcxproj  opal.vcxproj.filters  perm.opal  syntax.txt  testfile.txt
examples/: add10.opal  factorial.opal  fibonacci.opal  opal  perm.opal
opal.dir/Debug/: opal.exe.recipe
opal.dir/Debug/opal.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  opal.lastbuildstate
src/: ast.hpp  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  syntax.hpp  token.cpp  token.hpp
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
